--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: The S Group -- TEST
-Author: Justin Peck -- TEST4
-Description: The S Group New Website -- TEST5
+Theme Name: TSG Site
+Author: Justin Peck
+Description: TSG Site Wordpress
 Version: 0.0.1
-Tags: The S Group
+Tags: wordpress
 */
 
 
