--- a/styles.css
+++ b/styles.css
@@ -98,27 +98,63 @@ h1 {
   text-align: center;
   padding: 2rem 0 2rem 0; }
 
-/* line 42, sass/styles.scss */
-p {
+/* line 43, sass/styles.scss */
+p, ul, li {
   color: #fff;
   font-size: 14px;
   margin: 0;
   background-color: transparent;
-  box-shadow: unset; }
+  box-shadow: unset;
+  opacity: 1;
+  z-index: 10;
+  position: relative; }
 
 /*=====  End of GLOBAL  ======*/
-/* line 54, sass/styles.scss */
+/*=============================================
+=            Arrows            =
+=============================================*/
+/* line 62, sass/styles.scss */
+.section__content--arrow-up,
+.section__content--arrow-down {
+  position: absolute;
+  z-index: 10; }
+
+/* line 68, sass/styles.scss */
+.section__content--down-icon {
+  transform: rotateZ(180deg); }
+
+/* line 72, sass/styles.scss */
+.section__content--arrow-up {
+  margin-bottom: 4rem;
+  top: 25%; }
+
+/* line 77, sass/styles.scss */
+.section__content--arrow-down {
+  bottom: 25%; }
+
+/*=====  End of Arrows  ======*/
+/* line 83, sass/styles.scss */
+[data-slick] div {
+  display: block;
+  background: red;
+  width: 40px;
+  position: relative;
+  height: 40px;
+  z-index: 20;
+  margin: 2rem; }
+
+/* line 94, sass/styles.scss */
 .section:before {
   content: '';
   display: block;
   position: absolute;
   width: 80%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.7);
   left: 0;
   z-index: 2;
   top: 0; }
-/* line 65, sass/styles.scss */
+/* line 105, sass/styles.scss */
 .section:after {
   content: '';
   display: block;
@@ -129,7 +165,7 @@ p {
   top: 0;
   right: 0; }
 
-/* line 77, sass/styles.scss */
+/* line 117, sass/styles.scss */
 .site-header__nav {
   width: 60%;
   float: right;
@@ -141,7 +177,7 @@ p {
   justify-content: space-evenly;
   margin: 30px 3%;
   position: relative; }
-  /* line 89, sass/styles.scss */
+  /* line 129, sass/styles.scss */
   .site-header__nav:before {
     content: '';
     position: absolute;
@@ -151,7 +187,52 @@ p {
     left: 0;
     border-right: 0px; }
 
-/* line 100, sass/styles.scss */
+/* line 140, sass/styles.scss */
+.menu-item {
+  display: flex;
+  flex: 1;
+  text-align: center;
+  align-items: center;
+  justify-content: center; }
+
+/* line 148, sass/styles.scss */
+.site-header {
+  z-index: 5;
+  max-height: 20%; }
+
+/* line 153, sass/styles.scss */
+.section__content {
+  width: 60%; }
+
+/* line 158, sass/styles.scss */
+.section__content--header {
+  opacity: 1;
+  z-index: 10;
+  position: relative;
+  font-size: 32px;
+  text-align: left;
+  margin-bottom: 2rem; }
+
+/* line 167, sass/styles.scss */
+.section__content--wizzy {
+  color: #fff;
+  font-size: 14px;
+  opacity: 1;
+  z-index: 10;
+  position: relative;
+  margin-bottom: 6rem;
+  padding-bottom: 1rem; }
+  /* line 176, sass/styles.scss */
+  .section__content--wizzy p {
+    margin-bottom: 2rem; }
+  /* line 179, sass/styles.scss */
+  .section__content--wizzy ul {
+    line-height: 1; }
+  /* line 182, sass/styles.scss */
+  .section__content--wizzy li {
+    line-height: 1; }
+
+/* line 187, sass/styles.scss */
 nav a {
   color: #FFF;
   display: block;
@@ -161,14 +242,18 @@ nav a {
   font-weight: 600;
   text-transform: uppercase; }
 
-/* line 111, sass/styles.scss */
+/* line 198, sass/styles.scss */
 nav {
   background-image: none; }
-  /* line 114, sass/styles.scss */
+  /* line 201, sass/styles.scss */
   nav li:first-of-type a {
     color: black; }
 
-/* line 120, sass/styles.scss */
+/* line 206, sass/styles.scss */
+li {
+  list-style-type: disc; }
+
+/* line 210, sass/styles.scss */
 #fp-nav ul li .fp-tooltip {
   position: absolute;
   top: -2px;
@@ -185,12 +270,14 @@ nav {
   cursor: pointer;
   font-weight: 600; }
 
-/* line 138, sass/styles.scss */
+/* line 228, sass/styles.scss */
 ul.menu {
   display: flex;
-  flex-direction: row-reverse; }
+  flex-direction: row-reverse;
+  flex: 1;
+  justify-content: space-evenly; }
 
-/* line 143, sass/styles.scss */
+/* line 235, sass/styles.scss */
 .site-header__logo {
   position: absolute;
   left: 5%;
@@ -199,7 +286,7 @@ ul.menu {
   align-items: center;
   justify-content: space-evenly; }
 
-/* line 153, sass/styles.scss */
+/* line 245, sass/styles.scss */
 .slide__brand-container {
   width: 90%;
   margin: 0 auto;
@@ -208,16 +295,16 @@ ul.menu {
   max-height: 70px;
   align-items: center; }
 
-/* line 162, sass/styles.scss */
+/* line 254, sass/styles.scss */
 .slide__brand-logo {
   max-height: 180px;
   max-width: 230px;
   transition: 400ms all ease; }
-  /* line 167, sass/styles.scss */
+  /* line 259, sass/styles.scss */
   .slide__brand-logo:hover {
     opacity: 0.7; }
 
-/* line 172, sass/styles.scss */
+/* line 264, sass/styles.scss */
 #myVideo {
   position: absolute;
   right: 0;
@@ -225,15 +312,333 @@ ul.menu {
   min-width: 100%;
   min-height: 100%; }
 
-/* line 180, sass/styles.scss */
+/* line 272, sass/styles.scss */
 .fp-slide.fp-table {
   position: relative; }
 
-/* line 184, sass/styles.scss */
+/*=============================================
+=            HORIZONTAL SLIDER            =
+=============================================*/
+/* line 282, sass/styles.scss */
+.section.horizontal-slider {
+  padding: 10% 5%; }
+  /* line 284, sass/styles.scss */
+  .section.horizontal-slider:before {
+    background: transparent;
+    z-index: 0; }
+  /* line 289, sass/styles.scss */
+  .section.horizontal-slider:after {
+    z-index: 0;
+    background: rgba(237, 119, 52, 0.7); }
+
+/* line 295, sass/styles.scss */
+.slide__brand-description {
+  width: 80%;
+  border-radius: 8px;
+  background-color: #fefefe;
+  margin: 15% auto;
+  /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888; }
+
+/* line 304, sass/styles.scss */
+.slide__brand-modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4); }
+
+/*=====  End of HORIZONTAL SLIDER  ======*/
+/* line 320, sass/styles.scss */
 .slide__brand-container .slide__brand-content-wrapper p {
-  visibility: hidden;
-  position: absolute;
+  display: block;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
+  text-align: left;
+  padding: 2rem;
+  font-size: 18px;
+  line-height: 2;
+  color: #000; }
+
+/*=============================================
+=            FOOTER            =
+=============================================*/
+/* line 338, sass/styles.scss */
+.section-footer {
+  height: auto;
+  padding: 2rem 10%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
+  /* line 344, sass/styles.scss */
+  .section-footer:before, .section-footer:after {
+    background: transparent; }
+
+/* line 351, sass/styles.scss */
+.section-footer .fp-tableCell {
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  justify-content: space-between; }
+
+/* line 358, sass/styles.scss */
+.section__footer-column {
+  width: 50%; }
+
+/* line 362, sass/styles.scss */
+.section__footer-content {
+  padding: 0 0 4rem; }
+
+/* line 366, sass/styles.scss */
+.section__footer-social--action {
+  position: relative;
+  z-index: 2; }
+
+/* line 372, sass/styles.scss */
+.section__footer-content--text p {
+  font-size: 18px;
+  line-height: 1;
+  padding: 0 1rem; }
+
+/* line 378, sass/styles.scss */
+.section__footer-content--logo {
+  max-height: 120px; }
+
+/* line 382, sass/styles.scss */
+.section__footer-content--wrapper {
+  display: flex;
+  align-items: center; }
+
+/* line 387, sass/styles.scss */
+.section__footer-social {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+  padding: 2rem 0; }
+
+/* line 395, sass/styles.scss */
+.section__footer-social--icon {
+  width: 40px;
+  display: block;
+  height: auto;
+  fill: #fff; }
+
+/*=====  End of FOOTER  ======*/
+/*=============================================
+=            HORIZONTAL TIMELINE            =
+=============================================*/
+/* line 408, sass/styles.scss */
+.section.timeline {
+  padding: 0; }
+
+/* line 411, sass/styles.scss */
+#timeline {
+  overflow: hidden;
+  position: relative;
+  background: url("../images/dot.gif") left 45px repeat-x; }
+  /* line 416, sass/styles.scss */
+  #timeline:hover .tl-item {
+    width: 23.3333vw; }
+
+/* line 422, sass/styles.scss */
+#dates {
+  width: 100%;
+  overflow: hidden; }
+
+/* line 427, sass/styles.scss */
+#dates li {
+  list-style: none;
+  float: left;
+  font-size: 24px;
   text-align: center; }
+
+/* line 433, sass/styles.scss */
+.tl-item {
+  transform: translate3d(0, 0, 0);
+  position: relative;
+  width: 25vw;
+  height: 100vh;
+  min-height: 600px;
+  color: #fff;
+  overflow: hidden;
+  transition: width 0.5s ease; }
+  /* line 443, sass/styles.scss */
+  .tl-item:before, .tl-item:after {
+    transform: translate3d(0, 0, 0);
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%; }
+  /* line 451, sass/styles.scss */
+  .tl-item:after {
+    background: rgba(3, 22, 37, 0.85);
+    opacity: 1;
+    transition: opacity 0.5s ease; }
+  /* line 457, sass/styles.scss */
+  .tl-item:before {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #000000 75%);
+    z-index: 1;
+    opacity: 0;
+    transform: translate3d(0, 0, 0) translateY(50%);
+    transition: opacity 0.5s ease, transform 0.5s ease; }
+  /* line 465, sass/styles.scss */
+  .tl-item:hover {
+    width: 30vw !important; }
+    /* line 468, sass/styles.scss */
+    .tl-item:hover:after {
+      opacity: 0; }
+    /* line 472, sass/styles.scss */
+    .tl-item:hover:before {
+      opacity: 1;
+      transform: translate3d(0, 0, 0) translateY(0);
+      transition: opacity 1s ease, transform 1s ease 0.25s; }
+    /* line 478, sass/styles.scss */
+    .tl-item:hover .tl-content {
+      opacity: 1;
+      transform: translateY(0);
+      transition: all 0.75s ease 0.5s; }
+    /* line 484, sass/styles.scss */
+    .tl-item:hover .tl-bg {
+      filter: grayscale(0); }
+
+/* line 489, sass/styles.scss */
+.tl-content {
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 0.75s ease 0.5s; }
+
+/* line 495, sass/styles.scss */
+.tl-bg {
+  filter: grayscale(0); }
+
+/* line 499, sass/styles.scss */
+.tl-bg {
+  transform: translate3d(0, 0, 0);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  background-position: center center;
+  transition: filter 0.5s ease;
+  filter: grayscale(100%); }
+
+/* line 510, sass/styles.scss */
+#dates a {
+  line-height: 38px;
+  padding-bottom: 10px; }
+
+/* line 515, sass/styles.scss */
+#dates .selected {
+  font-size: 38px; }
+
+/* line 520, sass/styles.scss */
+#grad_left,
+#grad_right {
+  width: 100px;
+  height: 350px;
+  position: absolute;
+  top: 0; }
+
+/* line 528, sass/styles.scss */
+#grad_left {
+  left: 0; }
+
+/* line 532, sass/styles.scss */
+#grad_right {
+  right: 0; }
+
+/* line 536, sass/styles.scss */
+#next,
+#prev {
+  position: absolute;
+  top: 0;
+  font-size: 70px;
+  top: 170px;
+  z-index: 1000;
+  width: 22px;
+  height: 38px;
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  text-indent: -9999px;
+  overflow: hidden; }
+
+/* line 551, sass/styles.scss */
+#next:hover,
+#prev:hover {
+  background-position: 0 -76px; }
+
+/* line 556, sass/styles.scss */
+#next {
+  right: 50px;
+  background: red; }
+
+/* line 561, sass/styles.scss */
+#prev {
+  left: 50px;
+  background: blue; }
+
+/* line 565, sass/styles.scss */
+.tl-content {
+  transform: translate3d(0, 0, 0) translateY(25px);
+  position: relative;
+  z-index: 1;
+  line-height: 1;
+  text-align: center;
+  margin: 0 1.618em;
+  top: 35%;
+  opacity: 0; }
+  /* line 575, sass/styles.scss */
+  .tl-content h1 {
+    text-transform: uppercase;
+    color: #ef682d;
+    font-size: 2rem;
+    font-weight: normal;
+    margin-bottom: 1rem; }
+
+/* line 584, sass/styles.scss */
+.tl-year {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 1;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff; }
+  /* line 593, sass/styles.scss */
+  .tl-year p {
+    font-family: 'Pathway Gothic One',Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-size: 1.728rem;
+    line-height: 0; }
+
+/* line 600, sass/styles.scss */
+.tl-bg {
+  transform: translate3d(0, 0, 0);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  background-position: center center;
+  transition: filter 0.5s ease;
+  filter: grayscale(100%); }
+
+/* line 611, sass/styles.scss */
+#next.disabled,
+#prev.disabled {
+  opacity: 0.2; }
+
+/*=====  End of HORIZONTAL TIMELINE  ======*/
